src/test/testData/nls/unresolvedReference/simplest/before/nls.properties
NLS_INCLUDES=<error descr="Cannot resolve nls name 'created'">crea<caret>ted</error>